Fix body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -2685,12 +2685,12 @@ hr.border-2 {
   position: absolute;
   opacity: 0.02;
   z-index: -1;
-  bottom: 15px;
+  bottom: 35px;
   left: 120px;
-  width: 100%;
 }
 .facilties .single-facility .facility-shape img {
-  max-width: 40%;
+  width: 120px;
+  height: 120px;
 }
 /* hr */
 hr {
